--- a/publican-jboss/de-DE/Feedback.po
+++ b/publican-jboss/de-DE/Feedback.po
@@ -1,4 +1,5 @@
 # translation of Feedback.po to
+# jdimanos <jdimanos@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -6,11 +7,11 @@ msgstr ""
 "POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2010-08-13 09:42+1000\n"
 "Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
-"Language: \n"
+"Language-Team: <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -54,7 +55,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "Red Hat unterhält außerdem eine Vielzahl von Mailing-Listen zur Diskussion über Red Hat Software und Technologie. Eine Übersicht der öffentlich verfügbaren Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum Abonnieren dieser Liste oder um auf deren Archiv zuzugreifen."
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "Wir freuen uns auf Ihr Feedback!"
 
@@ -67,11 +68,15 @@ msgstr "<primary>Feedback</primary> <secondary>Kontaktinformationen für dieses 
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
+"Falls Sie einen Tippfehler finden oder eine Idee zur Verbesserung des Handbuchs \n"
+"haben, freuen wir uns über Ihr Feedback! \n"
+"Bitte reichen Sie hierzu einen Fehlerbericht für das Produkt <literal>&BZPRODUCT;</literal> und die Komponente <literal>&BZCOMPONENT;</literal> ein. \n"
+"Das folgende Link bringt Sie zu einem bereits ausgefüllten Bug-Report für dieses Produkt: &BZURL;."
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Füllen Sie folgende Vorlage in Bugzillas <literal>Description</literal>-Feld aus. Bitte seien Sie so genau wie möglich bei der Problembeschreibung, da dies uns dabei hilft, das Problem so schnell wie möglich zu beheben."
 
 #. Tag: screen
 #, no-c-format
@@ -92,17 +97,23 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"Dokument-URL:\n"
+"\n"
+"\n"
+"Nummer und Name des Abschnitts:\n"
+"\n"
+"\n"
+"Problembeschreibung:\n"
+"\n"
+"\n"
+"Verbesserungsvorschlag:\n"
+"\n"
+"\n"
+"Weitere Informationen:\n"
+"\n"
+"\n"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wie dieses verbessert werden könnte, freuen wir uns über Ihr Feedback! Reichen Sie einen Fehlerbericht für die Komponente <application>&PRODUCT;</application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> ein."
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts, dass Sie die Kennung des Handbuchs mit angeben: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "Falls Sie uns einen Vorschlag zur Verbesserung der Dokumentation senden möchten, sollten Sie hierzu möglichst genaue Angaben machen. Wenn Sie einen Fehler gefunden haben, geben Sie bitte die Nummer des Abschnitts und einen Ausschnitt des Textes an, damit wir diesen leicht finden können."
+msgstr "Bitte geben Sie auch Ihren Namen an, damit wir uns offiziell bei Ihnen bedanken können."
