--- a/publican-jboss/es-ES/Feedback.po
+++ b/publican-jboss/es-ES/Feedback.po
@@ -1,6 +1,7 @@
 # translation of Feedback.po to Spanish
 # Manuel Ospina <mospina@redhat.com>, 2007.
 # Gladys Guerrero  <gguerrer@redhat.com>, 2010.
+# angela.garcia <agarcia@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -9,10 +10,10 @@ msgstr ""
 "PO-Revision-Date: 2010-08-23 16:25+1000\n"
 "Last-Translator: Gladys Guerrero <gguerrer@redhat.com>\n"
 "Language-Team: Spanish <en@li.org>\n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -56,7 +57,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "Red Hat alberga una lista grande de correos electrónicos para discutir sobre software de Red Hat y tecnología. Encontrará un listado de las listas de correo disponibles al público en <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Haga clic en el nombre de la lista a la que quiera suscribirse o para acceder a los archivos de listados."
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "¡Necesitamos sus comentarios!"
 
@@ -68,12 +69,12 @@ msgstr "<primary>Comentarios</primary> <secondary>Información de contacto para 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "Si encuentra algun error o si se le ocurre una manera de mejorar este manual, nos encantaría escuchar sus sugerencias. Complete un reporte en Bugzilla frente al producto <literal>&BZPRODUCT;</literal> y el componente <literal>&BZCOMPONENT;</literal>. El siguiente enlace le llevará a un reporte de error ya completado para este producto: &BZURL;."
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Llene la siguiente plantilla en el campo de  <literal>Description</literal> de Bugzilla. Sea tan especifico como le sea posible al describir el problema, esto ayudará a asegurarnos de que lo podemos solucionar rápidamente."
 
 #. Tag: screen
 #, no-c-format
@@ -94,17 +95,23 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"URL del documento:\n"
+"\n"
+"\n"
+"Número de la sección y nombre:\n"
+"\n"
+"\n"
+"Describa el problema:\n"
+"\n"
+"\n"
+"Sugerencias para mejorar:\n"
+"\n"
+"\n"
+"Información adicional:\n"
+"\n"
+"\n"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "Si encuentra un error tipográfico en este manual o si ha pensado que hay alguna manera de mejorar este manual, nos gustaría escuchar sus sugerencias. Por favor complete un reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> relacionando el producto <application>&PRODUCT;</application>."
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "Cuando envíe un reporte de error no olvide mencionar el identificador&#39; del manual: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "Si tiene alguna sugerencia para mejorar la documentación, trate de ser tan específico como sea posible. Si ha encontrado algún error, por favor incluya el número de la sección y parte del texto que lo rodea para que sea más fácil ubicarlo."
+msgstr "Asegúrese de darnos su nombre para poder darle todo el crédito por reportar el problema."
