--- a/publican-jboss/fr-FR/Feedback.po
+++ b/publican-jboss/fr-FR/Feedback.po
@@ -1,6 +1,7 @@
 # translation of Feedback.po to French
 # Decroux Fabien <fdecroux@redhat.com>, 2007.
 # Sam Friedmann <sam.friedmann@redhat.com>, 2010.
+# croe@redhat.com <croe@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -9,10 +10,10 @@ msgstr ""
 "PO-Revision-Date: 2010-08-23 12:14+1000\n"
 "Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
 "Language-Team: French <French fedora-trans-fr@fedoraproject.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -43,7 +44,7 @@ msgstr "effectuer des recherches ou naviguer sur la base de connaissances d'arti
 #. Tag: para
 #, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "soumettre une requête de support au service de support global Red Hat (GSS)."
+msgstr "soumettre une requête de support au service Red Hat Global Support Services (GSS)."
 
 #. Tag: para
 #, no-c-format
@@ -56,24 +57,24 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "Vos commentaires sont importants&nbsp;!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr "<primary>feedback</primary> <secondary>informations de contact de ce manuel</secondary>"
+msgstr "<primary>feedback</primary> <secondary>qui contacter pour ce manuel</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "Si vous repérez une erreur de typographie dans ce guide, ou si vous pensez à un moyen de parfaire ce guide, faîtes-nous en part ! Soumettez-nous un rapport dans Bugzilla sous le produit  <literal>&BZPRODUCT;</literal> et sous le composant <literal>&BZCOMPONENT;</literal>. Le lien suivant vous conduira vers un format de rapport tout préparé pour le produit dont il s'agit : &BZURL;."
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Remplissez le formulaire suivant dans Bugzilla sous le champ <literal>Description</literal>. Veillez à être aussi précis que possible quand vous décrivez le problème; cela nous permettra de régler le problème plus rapidement. "
 
 #. Tag: screen
 #, no-c-format
@@ -94,17 +95,23 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"URL du Document :\n"
+"\n"
+"\n"
+"Numéro et Nom de Section :\n"
+"\n"
+"\n"
+"Description du problème :\n"
+"\n"
+"\n"
+"Suggestions pour améliorer :\n"
+"\n"
+"\n"
+"Informations supplémentaires :\n"
+"\n"
+"\n"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>) pour le produit <application>&PRODUCT;.</application>"
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "Lorsque vous soumettez un rapport de bogues, veuillez indiquer clairement les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "Si vous avez des suggestions pour améliorer la documentation, essayez de les décrire le plus précisément possible. Si vous avez trouvé une erreur, veuillez non seulement indiquer le numéro de section où elle se trouve mais également ajouter un extrait du texte qui l'entoure, afin que nous puissions la retrouver facilement."
+msgstr "N'oubliez pas de mentionner votre nom de façon à ce que nous puissions vous donner tout le crédit que vous méritez à soulever le problème en question."
