--- a/publican-jboss/it-IT/Feedback.po
+++ b/publican-jboss/it-IT/Feedback.po
@@ -1,4 +1,5 @@
 # translation of Feedback.po to
+# fvalen <fvalen@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -6,11 +7,11 @@ msgstr ""
 "POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2010-03-01 15:41+1000\n"
 "Last-Translator: \n"
-"Language-Team:  <it@li.org>\n"
-"Language: \n"
+"Language-Team: <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -54,7 +55,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "Red Hat presenta un gran numero di mailing list elettroniche per la discussione sulle tecnologie e sul software di Red Hat. È possibile trovare un elenco di liste pubbliche disponibili su <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Fate clic sul nome della lista desiderata per eseguire la registrazione ad accedere ai relativi archivi."
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "Inviateci i vostri commenti!"
 
@@ -66,12 +67,12 @@ msgstr "<primary>feedback</primary> <secondary>informazioni di contatto per ques
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "Se individuate degli errori di battitura, o se pensate di poter contribuire al miglioramento di questa guida, contattateci subito. Inviate i vostri suggerimenti tramite Bugzilla relativi al prodotto <literal>&BZPRODUCT;</literal> ed al componente <literal>&BZCOMPONENT;</literal>. Il seguente link vi direzionerà su di un bug report già completato per questo prodotto: &BZURL;."
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Completate il seguente template nel campo <literal>Descrizione</literal> di Bugzilla. Cercate di essere il più specifici possibile quando descrivete il problema; così facendo il problema potrà essere risolto il più velocemente possibile."
 
 #. Tag: screen
 #, no-c-format
@@ -92,44 +93,21 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"URL del documento:\n"
+"\n"
+"\n"
+"Nome e numero della sezione:\n"
+"\n"
+"\n"
+"Descrizione problema:\n"
+"\n"
+"\n"
+"Suggerimenti per il miglioramento:\n"
+"\n"
+"\n"
+"Informazioni aggiuntive:"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "Se individuate degli errori di battitura in questo manuale, o se pensate di poter contribuire al suo miglioramento, contattateci subito! Inviate i vostri suggerimenti tramite Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> sul componente <application>&PRODUCT;.</application>"
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "Quando inviate un bug report assicuratevi di indicare l'identificatore del manuale: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "Se inviate un commento per contribuire al miglioramento della guida, cercate di essere il più specifici possibile. Se avete individuato un errore, indicate il numero della sezione e alcune righe di testo, in modo da agevolare la ricerca dell'errore."
-
-#~ msgid "help"
-#~ msgstr "aiuto"
-
-#~ msgid "getting help"
-#~ msgstr "come ottenere assistenza"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "Visitate il Red Hat Knowledgebase su <ulink url=\"http://kbase.redhat.com\"></ulink> per trovare o consultare gli articoli di supporto tecnico relativi ai prodotti di Red Hat."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "La sottoscrizione a Red Hat conferisce il diritto al supporto da parte del Red Hat Global Support Services (GSS). Consultare <ulink url=\"http://support.redhat.com\"></ulink> per maggiori informazioni su come ottenere l'assistenza dal GSS."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "Accedete ad altre documentazioni di Red Hat su <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Mailing list elettroniche di Red Hat"
-
-#~ msgid "feedback"
-#~ msgstr "commento"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "informazioni di contatto per questo manuale"
+msgstr "Assicuratevi di indicare il nome se desiderate essere riconosciuti per aver riportato il problema."
