--- a/publican-jboss/pt-BR/Feedback.po
+++ b/publican-jboss/pt-BR/Feedback.po
@@ -1,6 +1,7 @@
 # translation of Feedback.po to
 # Leticia de Lima <ldelima@redhat.com>, 2007.
 # Glaucia Cintra <gcintra@redhat.com>, 2010.
+# ldelima@redhat.com <ldelima@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -8,11 +9,11 @@ msgstr ""
 "POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2010-08-23 12:28+1000\n"
 "Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
-"Language: pt\n"
+"Language-Team: <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -56,7 +57,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "A Red Hat acomoda um grande número de listas de correio eletrônico para discussão de software e tecnologias da Red Hat. Você pode encontrar uma lista contendo as listas públicas disponíveis em <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Clique no nome de qualquer lista para subscrever àquela lista ou acessar o histórico das listas."
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "Nós precisamos do seu Comentário!"
 
@@ -68,12 +69,12 @@ msgstr "<primary>comentário</primary> <secondary>informação de contato para e
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "Caso você encontre um erro de tipografia ou sabe uma melhor forma de escrever este guia, nós queremos muito ouvir sua opinião. Por favor submeta um relatório em relação ao produto <literal>&BZPRODUCT;</literal> e ao componente <literal>&BZCOMPONENT;</literal>. O seguinte link o levará a um pré-preenchimento deste relatório de bug para este produto: &BZURL;."
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Preencha o seguinte modelo no campo <literal>Description</literal> do Bugzilla. Seja bastante específico na descrição do problema, uma vez que isto nos ajudará a resolver o problema com maior agilidade."
 
 #. Tag: screen
 #, no-c-format
@@ -94,17 +95,24 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"URL do Documento:\n"
+"\n"
+"\n"
+"Nome e Número da seção:\n"
+"\n"
+"\n"
+"Descrição do problema:\n"
+"\n"
+"\n"
+"Sugestões de Aperfeiçoamento:\n"
+"\n"
+"\n"
+"Informação adicional:\n"
+"\n"
+"\n"
+"\n"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> contra o produto <application>&PRODUCT;.</application>."
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "Ao submeter um relatório de erro, certifique-se de mencionar a identificação do manual:<citetitle>&BOOKID;</citetitle>."
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "Se você tiver uma sugestão para o melhoramento deste documento, por favor tente ser o mais específico possível em sua descrição. Caso você tenha encontrado um erro, por favor inclua o número da seção e alguns detalhes a respeito do texto para a nossa melhor identificação."
+msgstr "Por favor forneça o seu nome para que tenha o reconhecimento merecido por relatar este problema."
