--- a/publican-jboss/zh-CN/Feedback.po
+++ b/publican-jboss/zh-CN/Feedback.po
@@ -2,6 +2,7 @@
 # Xi HUANG <xhuang@redhat.com>, 2007.
 # Leah Liu <lliu@redhat.com>, 2010.
 # translation of Feedback.po to
+# xi.huang <xhuang@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -10,10 +11,10 @@ msgstr ""
 "PO-Revision-Date: 2010-08-16 17:08+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
 "Language-Team: Wei Liu\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -57,7 +58,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "红帽还托管了大量讨论红帽软件和技术的电子邮件列表。公开列表位于 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>。点击任意列表名称即可订阅该列表或者访问列表归档。"
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "我们需要您的反馈！"
 
@@ -69,12 +70,12 @@ msgstr "<primary>反馈</primary> <secondary>本手册的联络信息</secondary
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "如果你在本指南里发现了印刷错误，或者你有改进该手册的建议，我们希望听到你的声音！请提交报告到 Bugzilla 并指明产品 <literal>&BZPRODUCT;</literal> 和组件 <literal>&BZCOMPONENT;</literal>。下面的链接是针对本产品 &BZURL; 预先填写的错误报告。"
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "请填写 Bugzilla 的 <literal>Description</literal> 字段。请尽量将问题具体化，这样我们就可以尽快改正。"
 
 #. Tag: screen
 #, no-c-format
@@ -95,17 +96,23 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "如​果​您​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​您​的​意​见​。​请​在 Bugzilla <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> 中​根据产品 <application>&PRODUCT;.</application> 提交​报​告​。​"
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "提交报告时，请​提供​文​档​的​标​识​符​：<citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "如​果​您​有​改​进​本​文​档​的​建​议​，请​尽​量​将​其​明​确​化​。​如​果​您​发​现​了​错​误​，请​指​出​章​节​号​以及上下文​，以​便​我​们​尽​快​找​到​并​更​正​该​。​"
+msgstr "请提供你的名字以获得关于报告该问题的 credit。"
