--- a/publican-jboss/ja-JP/Feedback.po
+++ b/publican-jboss/ja-JP/Feedback.po
@@ -1,6 +1,7 @@
 # translation of Feedback.po to Japanese
 # Kiyoto Hashida <khashida@redhat.com>, 2007, 2010.
 # Noriko Mizumoto <noriko@fedoraproject.org>, 2010.
+# Yamamoto Mie <myamamot@redhat.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -9,33 +10,33 @@ msgstr ""
 "PO-Revision-Date: 2010-08-30 12:51+1000\n"
 "Last-Translator: Noriko Mizumoto <noriko@fedoraproject.org>\n"
 "Language-Team: Japanese\n"
-"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=1; plural=0;\n"
+"Language: ja\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr "ヘルプの取得とフィードバックの提出"
+msgstr "サポート、およびフィードバックのお願い"
 
 #. Tag: title
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr "ヘルプが必要ですか？"
+msgstr "サポートが必要ですか？"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr "<primary>ヘルプ</primary> <secondary>ヘルプを得る</secondary>"
+msgstr "<primary>サポート</primary> <secondary>サポートを受ける</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "本文に説明してある手順で問題に遭遇した場合は、Red Hat カスタマーポータル(<ulink url=\"http://access.redhat.com\" />)をご覧ください。カスタマーポータルでは以下を行うことができます。"
+msgstr "本書に説明してある手順で問題があれば、Red Hat カスタマーポータル(<ulink url=\"http://access.redhat.com\" />)をご覧ください。カスタマーポータルでは以下を行うことができます。"
 
 #. Tag: para
 #, no-c-format
@@ -50,32 +51,32 @@ msgstr "サポートケースを Red Hat グローバルサポートサービス
 #. Tag: para
 #, no-c-format
 msgid "access other product documentation."
-msgstr "他の製品ドキュメントを参照することができます。"
+msgstr "他の製品文書を参照することができます。"
 
 #. Tag: para
 #, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "また、Red Hat は Red Hat のソフトウェアやテクノロジーに関するディスカッションの場として多くのメーリングリストをホストしています。公開されているメーリングリストについては<ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>で一覧を参照してください。メーリングリストをサブスクライブする、またはメーリングリストのアーカイブを参照する場合はそのメーリングリスト名をクリックします。"
+msgstr "また、Red Hat は Red Hat のソフトウェアやテクノロジーに関するディスカッションの場として多くのメーリングリストを設置しています。公開されているメーリングリストについては<ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>で一覧を参照してください。メーリングリストをサブスクライブする、またはメーリングリストのアーカイブを参照する場合はそのメーリングリスト名をクリックします。"
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "フィードバックをお願いします"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr "<primary>フィードバック</primary> <secondary>本文に関する連絡先情報</secondary>"
+msgstr "<primary>フィードバック</primary> <secondary>本書に対する連絡先情報</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "誤植、本ガイドの改善案がある場合、ご意見お待ちしております。製品<literal>&BZPRODUCT;</literal>、コンポーネント<literal>&BZCOMPONENT;</literal>としBugzilla から報告してください。以下のリンク&BZURL;から、あらかじめ記入が施されている本製品のバグレポートへ移動できます。"
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "Bugzilla の<literal>Description</literal> フィールドにある以下のテンプレートに記載してください。できるだけ具体的に問題を説明していただけると、迅速に問題解決へ向けた取り組みが行いやすくなります。"
 
 #. Tag: screen
 #, no-c-format
@@ -96,17 +97,17 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"文書URL：\n"
+"\n"
+"項、項のタイトル：\n"
+"\n"
+"問題の説明：\n"
+"\n"
+"改善案：\n"
+"\n"
+"追加情報："
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "本文に誤植を見つけられた場合や本文に関する改善案をお持ちの場合はぜひお知らせください。Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>)にて、該当する製品<application>&PRODUCT;.</application>に対しバグ報告をお願いいたします。"
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "バグ報告を提出される場合は、ドキュメントの識別子となる<citetitle>&BOOKID;</citetitle>を忘れずに添えてください。"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "ドキュメントに関する改善のご意見については、できるだけ具体的にお願いいたします。誤りを発見された場合は、セクション番号および該当部分の前後の文章も含めてご報告頂くと照合が容易になります。"
+msgstr "問題報告の功績が認められるよう、名前を記載するのを忘れないようにしてください 。"
