--- a/publican-jboss/zh-TW/Feedback.po
+++ b/publican-jboss/zh-TW/Feedback.po
@@ -1,6 +1,7 @@
 # translation of Feedback.po to
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
 # Chester Cheng <ccheng@紅帽子>, 2010.
+# tchuang <tchuang@example.com>, 2011. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
@@ -8,11 +9,11 @@ msgstr ""
 "POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2010-08-23 11:36+1000\n"
 "Last-Translator: \n"
-"Language-Team:  <zh@li.org>\n"
-"Language: \n"
+"Language-Team: <zh@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
@@ -23,7 +24,7 @@ msgstr "取得幫助，提供意見"
 #. Tag: title
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr "需要幫助嗎？"
+msgstr "您需要幫助嗎？"
 
 #. Tag: indexterm
 #, no-c-format
@@ -56,7 +57,7 @@ msgid "Red Hat also hosts a large number of electronic mailing lists for discuss
 msgstr "Red Hat 擁有許多電子郵件清單，以討論 Red Hat 的軟體與技術。您可以藉由 <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> 找到公開的郵件清單。請按下郵件清單的名稱，以選擇訂閱或檢視過去的清單紀錄。"
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Give us Feedback"
 msgstr "我們需要您的意見！"
 
@@ -68,12 +69,12 @@ msgstr "<primary>意見</primary> <secondary>本指南的聯絡資訊</secondary
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
-msgstr ""
+msgstr "若您發現了拼字上的錯誤，或希望提供改善本指南的建議，我們很樂意收到您的意見。請在 Bugzilla 中，針對於 <literal>&BZPRODUCT;</literal> 這項產品，和 <literal>&BZCOMPONENT;</literal> 元件提交一份報告。下列連結將會帶領您至這項產品的預填入錯誤報告網頁：&BZURL;。"
 
 #. Tag: para
 #, no-c-format
 msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
-msgstr ""
+msgstr "請在下列 Bugzilla 的<literal>描述</literal>欄位中填入資訊。請盡可能明確地描述問題；這可協助我們快速地解決問題。"
 
 #. Tag: screen
 #, no-c-format
@@ -94,17 +95,21 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
+"文件 URL：\n"
+"\n"
+"\n"
+"部份編號與名稱：\n"
+"\n"
+"\n"
+"描述問題：\n"
+"\n"
+"\n"
+"改善意見：\n"
+"\n"
+"\n"
+"額外資訊："
 
 #. Tag: para
 #, no-c-format
 msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
-msgstr ""
-
-#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-#~ msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中針對於 <application>&PRODUCT;.</application> 這個產品提交您的回報：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
-
-#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-#~ msgstr "當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
-
-#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-#~ msgstr "若您擁有改善文件的建議，請儘可能地將它詳細描述清楚。若您您發現錯誤的話，請包含區段編號以及該錯誤周圍的部分文字，如此一來我們便能輕易地找到該錯誤。"
+msgstr "請確認您提供了您的姓名，如此一來您才會出現在回報問題的參與名單中。"
