--- a/publican/Changes
+++ b/publican/Changes
@@ -44,6 +44,7 @@
   - Don't validate xml parsed as text in print_unused. BZ #705956
   - Fix admonition layout. BZ #715158
   - Add manual_toc_update config for web-sites. BZ #719573
+  - Use the force option for cvs-import.sh BZ #718102
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
