--- a/publican/Changes
+++ b/publican/Changes
@@ -25,7 +25,7 @@
   - Added base_brand config option for brands to allow multiple base brands. BZ #697367
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
   - Added site config toc_type to allow selecting TOC styles. BZ #697375
-  - Fix perl critic encoding cheack failing. BZ #684509
+  - Fix perl critic encoding check failing. BZ #684509
   - Added authortest target for author tests.
   - Fix some set validation errors. BZ #673402
   - Purge Site statistics, site tech and HTML site map. BZ #697376
