Fix indexterm tag causes a line split in PDF. BZ #713669
git-svn-id: file:///srv/svn/publican/trunk@1822 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -45,6 +45,7 @@
   - Fix admonition layout. BZ #715158
   - Add manual_toc_update config for web-sites. BZ #719573
   - Use the force option for cvs-import.sh BZ #718102
+  - Fix indexterm tag causes a line split in PDF. BZ #713669
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
