--- a/publican/Changes
+++ b/publican/Changes
@@ -46,6 +46,7 @@
   - Add manual_toc_update config for web-sites. BZ #719573
   - Use the force option for cvs-import.sh BZ #718102
   - Fix indexterm tag causes a line split in PDF. BZ #713669
+  - Add no_embedtoc config for brands. BZ #723725
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
