updated IT translation, max_image_width 660
git-svn-id: file:///srv/svn/publican/trunk@1918 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/it-IT/Feedback.po
+++ b/publican-redhat/it-IT/Feedback.po
@@ -36,17 +36,17 @@ msgstr "Se avete incontrato delle difficoltà con una procedura descritta in que
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr "andate alla ricerca attraverso un knowledgebase degli articoli di supporto tecnico relativi ai prodotti di Red Hat"
+msgstr "andare alla ricerca attraverso un knowledgebase degli articoli di supporto tecnico relativi ai prodotti di Red Hat"
 
 #. Tag: para
 #, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "inviate una richiesta di supporto al Red Hat Global Support Services (GSS)."
+msgstr "inviare una richiesta di supporto al Red Hat Global Support Services (GSS)."
 
 #. Tag: para
 #, no-c-format
 msgid "access other product documentation."
-msgstr "accesso documentazione di un altro prodotto"
+msgstr "accedere alla documentazione di un altro prodotto"
 
 #. Tag: para
 #, no-c-format
