--- a/publican-openshift/ml-IN/Ref_Cloud_Compare_Deployment.po
+++ b/publican-openshift/ml-IN/Ref_Cloud_Compare_Deployment.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2011-06-01T02:51:10\n"
+"POT-Creation-Date: 2011-12-16T03:45:34\n"
 "PO-Revision-Date: 2011-05-26T02:58:31\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
@@ -25,12 +25,12 @@ msgstr ""
 
 #. Tag: entry
 #, no-c-format
-msgid "Express"
+msgid "OpenShift Express"
 msgstr ""
 
 #. Tag: entry
 #, no-c-format
-msgid "Flex"
+msgid "OpenShift Flex"
 msgstr ""
 
 #. Tag: entry
